# krkrz_dev

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
src/plugins/: CMakeLists.txt
